manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: matrimandir
spec:
  type: ClusterIP
  ports:
  - protocol: "TCP"
    port: 4000
  selector:
    app: matrimandir
