manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: matrimandir-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  rules:
  - host: mm.azha.talam.io
    http:
      paths:
      - backend:
          serviceName: matrimandir
          servicePort: 4000
